%%{init: {"theme": "base", "themeVariables": {"primaryColor": "#74c7e8", "primaryBorderColor": "#1f2937", "primaryTextColor": "#111827", "lineColor": "#2f2f2f", "fontFamily": "Arial"}}}%%
classDiagram
  direction LR
  class Category {
    -id : int
    -name : String
    -slug : String
    -description : Text
    -is_active : Boolean
  }
  class Product {
    -id : int
    -name : String
    -slug : String
    -description : Text
    -base_price : Decimal
    -stock_quantity : int
    -is_active : Boolean
    -image_url : URL
  }
  class Book {
    -author : String
    -isbn : String
    -publisher : String
    -publication_year : int
    -page_count : int
    -language : String
    -genre : String
  }
  class Electronics {
    -brand : String
    -model_number : String
    -warranty_period : String
    -voltage_requirement : String
    -connectivity : String
    -technical_specs : JSON
  }
  class Fashion {
    -brand : String
    -size : String
    -color : String
    -material : String
    -gender : String
    -season : String
  }
  Product <|-- Book
  Product <|-- Electronics
  Product <|-- Fashion
  Category "1" <-- "*" Product
